// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not keep data after the unmount if "persist: false" 1`] = `
Object {
  "fulfilled": true,
  "pending": false,
  "reason": null,
  "refreshing": false,
  "rejected": false,
  "value": "foo",
}
`;

exports[`should not keep data after the unmount if "persist: false" 2`] = `
Object {
  "fulfilled": false,
  "pending": false,
  "reason": null,
  "refreshing": false,
  "rejected": false,
  "value": null,
}
`;

exports[`should not keep data after the unmount if "persist: false" 3`] = `
Object {
  "fulfilled": true,
  "pending": false,
  "reason": null,
  "refreshing": false,
  "rejected": false,
  "value": "foo",
}
`;

exports[`should render a nested component 1`] = `
<div>
  2-foobar
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`should render a nested component 2`] = `
Object {
  "unique-key-1": Object {
    "meta": Object {
      "ssr": false,
      "ssrKey": "unique-key-1",
    },
    "state": Object {
      "counter": 2,
    },
  },
  "unique-key-2": Object {
    "meta": Object {
      "ssr": false,
      "ssrKey": "unique-key-2",
    },
    "state": Object {
      "fulfilled": true,
      "pending": false,
      "reason": null,
      "refreshing": false,
      "rejected": false,
      "value": "2-foo",
    },
  },
  "unique-key-3": Object {
    "meta": Object {
      "ssr": false,
      "ssrKey": "unique-key-3",
    },
    "state": Object {
      "fulfilled": true,
      "pending": false,
      "reason": null,
      "refreshing": false,
      "rejected": false,
      "value": "2-foobar",
    },
  },
}
`;

exports[`should render a nested component 3`] = `
<div>
  2-foobar
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`should render a nested component 4`] = `
Object {
  "unique-key-1": Object {
    "meta": Object {
      "ssr": false,
      "ssrKey": "unique-key-1",
    },
    "state": Object {
      "counter": 3,
    },
  },
  "unique-key-2": Object {
    "meta": Object {
      "ssr": false,
      "ssrKey": "unique-key-2",
    },
    "state": Object {
      "fulfilled": true,
      "pending": false,
      "reason": null,
      "refreshing": true,
      "rejected": false,
      "value": "2-foo",
    },
  },
  "unique-key-3": Object {
    "meta": Object {
      "ssr": false,
      "ssrKey": "unique-key-3",
    },
    "state": Object {
      "fulfilled": true,
      "pending": false,
      "reason": null,
      "refreshing": false,
      "rejected": false,
      "value": "2-foobar",
    },
  },
}
`;

exports[`should render a simple component 1`] = `
<div>
  foo
</div>
`;
